// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`electronDist 1`] = `"ENOENT: no such file or directory, scandir '<path>/Electron.app'"`;

exports[`one-package 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
    Object {
      "file": "latest-mac.json",
    },
    Object {
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`one-package 2`] = `
Object {
  "BuildMachineOSBuild": "15G31",
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleDocumentTypes": Array [
    Object {
      "CFBundleTypeExtensions": Array [
        "foo",
      ],
      "CFBundleTypeIconFile": "foo.icns",
      "CFBundleTypeName": "Foo",
      "CFBundleTypeRole": "Viewer",
    },
    Object {
      "CFBundleTypeExtensions": Array [
        "boo",
      ],
      "CFBundleTypeIconFile": "Test App ßW.icns",
      "CFBundleTypeName": "Boo",
      "CFBundleTypeRole": "Shell",
      "LSTypeIsPackage": true,
    },
    Object {
      "CFBundleTypeExtensions": Array [
        "bar",
      ],
      "CFBundleTypeIconFile": "someFoo.icns",
      "CFBundleTypeName": "Bar",
      "CFBundleTypeRole": "Shell",
    },
  ],
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "DTSDKBuild": "14D125",
  "DTSDKName": "macosx10.1010.10",
  "DTXcode": "0821",
  "DTXcodeBuild": "8C1002",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.9.0",
  "LSUIElement": true,
  "NSHighResolutionCapable": true,
  "NSMainNibFile": "MainMenu",
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`one-package 3`] = `
Object {
  "releaseDate": "1970-01-01T00:00:00.000Z",
  "url": "https://develar.s3.amazonaws.com/test/mac/Test%20App%20%C3%9FW-1.1.0-mac.zip",
  "version": "1.1.0",
}
`;

exports[`two-package 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "TestApp-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
    Object {
      "file": "latest-mac.json",
    },
    Object {
      "file": "TestApp-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;
